force-app/main/default/objects/Google_Analytics__c/fields/Average_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Sale_Price__c</fullName>
    <inlineHelpText>The average price of your product. An average can be helpful if you occasionally apply discounts or alter pricing in other ways</inlineHelpText>
    <label>Average Sale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>