force-app/main/default/objects/Google_Analytics__c/fields/Avg_Time__c.field-meta.xml
<CustomField>
    <fullName>Avg_Time__c</fullName>
    <label>Avg Time in Seconds</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>