force-app/main/default/objects/Google_Analytics__c/fields/Bounce_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Rate__c</fullName>
    <label>Bounce Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>