force-app/main/default/objects/Google_Analytics__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <label>Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>