force-app/main/default/objects/Google_Analytics__c/fields/Cost_or_ad_spend__c.field-meta.xml
<CustomField>
    <fullName>Cost_or_ad_spend__c</fullName>
    <inlineHelpText>How much did you spend on creating and promoting the marketing campaign? Here, you can factor in costs including ad spend, hourly wages of people who put time into the project, or costs related to producing content.</inlineHelpText>
    <label>Cost or ad spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>