force-app/main/default/objects/Google_Analytics__c/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <label>Direct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>