force-app/main/default/objects/Google_Analytics__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>