force-app/main/default/objects/Google_Analytics__c/fields/GEO__c.field-meta.xml
<CustomField>
    <fullName>GEO__c</fullName>
    <label>GEO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>