force-app/main/default/objects/Google_Analytics__c/fields/Lead_to_customer_rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_customer_rate__c</fullName>
    <formula>Leads_to_Sales__c / Number_of_leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What percentage of leads became a customer? If 12 out of 100 leads become a customer, your lead to customer rate would be 12% or 0.12.</inlineHelpText>
    <label>Lead-to-customer rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>