force-app/main/default/objects/Google_Analytics__c/fields/Leads_to_Close_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Leads_to_Close_Ratio__c</fullName>
    <formula>Closed__c /  Leads_to_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads to Close Ratio %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>