force-app/main/default/objects/Google_Analytics__c/fields/Leads_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Leads_to_Sales__c</fullName>
    <label>Leads to Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>