force-app/main/default/objects/Google_Analytics__c/fields/Marketing_ROI_Formular__c.field-meta.xml
<CustomField>
    <fullName>Marketing_ROI_Formular__c</fullName>
    <formula>((Number_of_leads__c * Lead_to_customer_rate__c * Average_Sale_Price__c ) - (Cost_or_ad_spend__c ) /(Cost_or_ad_spend__c )) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(number of leads x lead-to-customer rate x average sales price) - (cost or ad spend) ÷ (cost or ad spend) x 100.</inlineHelpText>
    <label>Marketing ROI Formular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>