force-app/main/default/objects/Google_Analytics__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <formula>MONTH( Month__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>