force-app/main/default/objects/Google_Analytics__c/fields/No_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sessions__c</fullName>
    <label>No. of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>