force-app/main/default/objects/Google_Analytics__c/fields/Number_of_leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_leads__c</fullName>
    <inlineHelpText>How many people converted to a lead?</inlineHelpText>
    <label>Number of leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>