force-app/main/default/objects/Google_Analytics__c/fields/Organic_Search__c.field-meta.xml
<CustomField>
    <fullName>Organic_Search__c</fullName>
    <label>Organic Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>