force-app/main/default/objects/Google_Analytics__c/fields/Paid_Search__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search__c</fullName>
    <inlineHelpText>Display + Paid Search</inlineHelpText>
    <label>Paid Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>