force-app/main/default/objects/Google_Analytics__c/fields/Referal__c.field-meta.xml
<CustomField>
    <fullName>Referal__c</fullName>
    <label>Referal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>