force-app/main/default/objects/Google_Analytics__c/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <label>SDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sherdah</fullName>
            </value>
            <value>
                <fullName>Krishna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>