force-app/main/default/objects/Google_Analytics__c/fields/Social__c.field-meta.xml
<CustomField>
    <fullName>Social__c</fullName>
    <label>Social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>