force-app/main/default/objects/Google_Analytics__c/fields/Total_Conver__c.field-meta.xml
<CustomField>
    <fullName>Total_Conver__c</fullName>
    <formula>Leads_to_Sales__c / Total_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Conversion%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>