force-app/main/default/objects/Google_Analytics__c/fields/Total_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users__c</fullName>
    <label>Total Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>