force-app/main/default/objects/Google_Analytics__c/fields/Unique_Users__c.field-meta.xml
<CustomField>
    <fullName>Unique_Users__c</fullName>
    <label>Unique Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>