force-app/main/default/objects/Google_Analytics__c/listViews/All_Google_Analytics.listView-meta.xml
<ListView>
    <fullName>All_Google_Analytics</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Google Analytics</label>
</ListView>